Changelog
=========

0.3.0 (Unreleased)
------------------

* added support for "Site Administrator" role
  (this **not** mean that we tested this on Plone 4.1).
  [keul]

0.2.0 (2011-05-06)
------------------

* enabled versioning [keul]
* changes to the content workflow [keul]
* i18n fixes [keul]
* some workflow changes [keul]
* FormOnline content has its own view [keul]
* added warning messages to the FormOnline view [keul]

0.1.0 (2010-07-19)
------------------

* Initial release [fdelia]