@@ -1,8 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is used to register new types of portlets. It can also
-     be used to register completely new column types. See CMFPlone's version
-     of this file for more information.
-  -->
-<portlets>
-  <!-- -*- extra stuff goes here -*- -->
-</portlets>
