@@ -1,13 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_skins" allow_any="False" cookie_persistence="False">
-
- <object name="auslfe.formonline.content.templates"
-    meta_type="Filesystem Directory View"
-    directory="auslfe.formonline.content:skins/auslfe.formonline.content.templates"/>
-    
- <skin-path name="*">
-  <layer name="auslfe.formonline.content.templates" insert-after="custom"/>
- 
- </skin-path>
- 
- </object>
