@@ -1,9 +1,0 @@
-<configure
-    xmlns="http://namespaces.zope.org/zope"
-    xmlns:cmf="http://namespaces.zope.org/cmf"
-    i18n_domain="auslfe.formonline.content">
-
-    <cmf:registerDirectory
-        name="auslfe.formonline.content.templates"/>
-
-  </configure>
