@@ -1,12 +1,0 @@
-## Script (Python) "getNotAddableTypes"
-##bind container=container
-##bind context=context
-##bind namespace=
-##bind script=script
-##bind subpath=traverse_subpath
-##parameters=
-##title=
-##
-# customize this script to filter addable portal types based on
-# context, the current user or other criteria
-return ('Favorite','FormOnline')
