@@ -19,7 +19,7 @@ setup(name='auslfe.formonline.content',
       keywords='plonegov form plone',
       author='RedTurtle Technology',
       author_email='sviluppoplone@redturtle.it',
-      url='',
+      url='http://plone.org/products/auslfe.formonline.pfgadapter',
       license='GPL',
       packages=find_packages(exclude=['ez_setup']),
       namespace_packages=['auslfe', 'auslfe.formonline'],
